# ddr-chart-tools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json
.spec/: workspace-manifest.json
.spec/learnings/: sdd-software-developer.md  software-developer.md
.spec/steering/: agent-conventions.md  product.md  rust-cli-standards.md  structure.md  tech.md
.spec/workflow/20260422-initial-deliverable/: design.md  requirements.md  tasks.md
.spec/workflow/20260429-ddr-mines-support/: design.md  requirements.md  tasks.md
docs/: ssq_format.md  ssq_mine_chunk_format.md  ultramix_archive_formats.md  xsb_format.md
scripts/: extract_ultramix_data.py
src/: error.rs  lib.rs  main.rs
src/cli/: job.rs  mod.rs
src/job/: batch.rs  mod.rs
src/model/: audio.rs  mod.rs  preview.rs  rational.rs  tick.rs
src/ogg/: decode.rs  encode.rs  mod.rs
src/sm/: mod.rs
src/ssc/: mod.rs  msd.rs  notes.rs
src/ssq/: aux.rs  chunk.rs  events.rs  mines.rs  mod.rs  steps.rs  tempo.rs  writer.rs
src/ssq_legacy/: mod.rs  modernize.rs
src/util/: io.rs  logging.rs  mod.rs  pair.rs
src/wavm/: mod.rs  xbox_ima.rs
src/xsb/: mod.rs
src/xwb/: container.rs  mod.rs
src/xwb/adpcm/: decode.rs  encode.rs  mod.rs
